@@ -15,6 +15,7 @@ All (GUI):
 
 - support for virtual list control added
 - wxFindReplaceDialog added (based on work of Markus Greither)
+- wxTextCtrl::SetMaxLength() added (wxMSW/wxGTK)
 
 wxHTML:
 
